Se saca enlace de la barra de menu (mision-vision ULS)

--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -43,9 +43,8 @@
                             <li class="{% active_menu '^[/]$' %}"><a href="/"><span>Inicio</span></a></li>
                             <li class="{% active_menu '^(/carrera/)(or|ob|pl|pe)([a-z]+)' %}"><a href="#"><span>Quienes Somos</span></a>
                                 <ul class="rd-navbar-dropdown">
-                                    <li><a href="/carrera/organigrama"><span class="text-middle">Organigrama</span></a>
-                                    <li><a href="/carrera/objetivos"><span class="text-middle">Misión - Visión</span></a>
-                                    <li><a href="http://www.userena.cl/userena/universidad/mision-y-vision.html" target="_blank"><span class="text-middle">Misión - Visión Universidad</span></a>
+                                    <li><a href="/carrera/organigrama"><span class="text-middle">Organigrama</span></a></li>
+                                    <li><a href="/carrera/objetivos"><span class="text-middle">Misión - Visión</span></a></li>
                                     <li><a href="/carrera/docentes"><span class="text-middle">Académicos</span></a></li>
                                     <li><a href="/carrera/plan"><span class="text-middle">Plan Estudios</span></a></li>
                                     <li><a href="/carrera/perfile"><span class="text-middle">Perfil Egresado</span></a></li>
