Se actualiza modelo de la base de datos y plantilla

--- a/web/templates/carrera/lista_docentes.html
+++ b/web/templates/carrera/lista_docentes.html
@@ -34,7 +34,7 @@
                                   <button data-custom-toggle="isotope-1" data-custom-toggle-disable-on-blur="true" class="isotope-filters-toggle btn btn-sm btn-default">Filtro<span class="caret"></span>
                                   </button>
                                   <ul id="isotope-1" class="list-sm-inline isotope-filters-list">
-                                      <li><a data-isotope-filter="rehabilitacion_orales" data-isotope-group="gallery" href="#" class="active">Rehabilitacion Oral</a></li>
+                                      <li><a data-isotope-filter="rehabilitacion_orales" data-isotope-group="gallery" href="#" class="active">Rehabilitación Oral</a></li>
                                       <li><a data-isotope-filter="odontopediatrias" data-isotope-group="gallery" href="#">Odontopediatrías</a></li>
                                       <li><a data-isotope-filter="periodoncias" data-isotope-group="gallery" href="#">Periodoncia</a></li>
                                       <li><a data-isotope-filter="endodoncias" data-isotope-group="gallery" href="#">Endodoncia </a></li>
@@ -49,7 +49,6 @@
                   <div class="col-lg-9 offset-lg-top-0 offset-top-34">
                       <div data-isotope-layout="fitRows" data-isotope-group="gallery" class="isotope">
                           <div data-photo-swipe-gallery="gallery" class="row text-sm-left">
-
                               <div data-filter="rehabilitacion_orales" class="col-md-12 isotope-item">
                                   <h3>Rehabilitación Oral</h3>
                                   <hr class="divider divider-lg hr-sm-left-2 bg-primary">
@@ -75,7 +74,6 @@
                                       </div>
                                   </div>
                               </div>
-
                               <div data-filter="odontopediatrias" class="col-md-12 isotope-item">
                                   <h3>Odontopediatría</h3>
                                   <hr class="divider divider-lg hr-sm-left-2 bg-primary">
@@ -101,7 +99,6 @@
                                       </div>
                                   </div>
                               </div>
-
                               <div data-filter="periodoncias" class="col-md-12 isotope-item">
                                   <h3>Periodoncia</h3>
                                   <hr class="divider divider-lg hr-sm-left-2 bg-primary">
@@ -127,9 +124,6 @@
                                       </div>
                                   </div>
                               </div>
-
-
-
                               <div data-filter="endodoncias" class="col-md-12 isotope-item">
                                   <h3>Endodoncia</h3>
                                   <hr class="divider divider-lg hr-sm-left-2 bg-primary">
@@ -155,7 +149,6 @@
                                       </div>
                                   </div>
                               </div>
-
                               <div data-filter="cirugias" class="col-md-12 isotope-item">
                                   <h3>Cirugías</h3>
                                   <hr class="divider divider-lg hr-sm-left-2 bg-primary">
@@ -181,7 +174,6 @@
                                       </div>
                                   </div>
                               </div>
-
                               <div data-filter="ciencias_preclinicas" class="col-md-12 isotope-item">
                                   <h3>Ciencias Preclínica</h3>
                                   <hr class="divider divider-lg hr-sm-left-2 bg-primary">
