se actualiza el banner y footer de la web

--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -6,18 +6,15 @@
         <div class="rd-navbar-inner">
             <div class="rd-navbar-top-panel">
                 <div>
-                    <address class="contact-info reveal-sm-inline-block text-left offset-none">
-                        <div class="p unit unit-spacing-xs unit-horizontal">
-                            <div class="unit-left"><span class="icon icon-xs icon-circle icon-gray-light mdi mdi-phone text-java"></span></div>
-                            <div class="unit-body">
-                              <a href="/carrera/contacto/" class="text-gray-darker">(51) 2 334952 - Carrera</a><br/>
-                              <a href="/carrera/contacto/" class="text-gray-darker">(51) 2 334966 - Clínica</a><br/>
-                            </div>
-                        </div>
-                    </address>
+                    <a href="http://www.userena.cl/">
+                        <img width='316' height='57' class='img-responsive' src="{% static 'images/logo-uls-blue.svg' %}" alt='logo-uls'/>
+                    </a>
                 </div>
-                <!--Navbar Brand-->
-                <div class="rd-navbar-brand veil reveal-md-inline-block"><a href="/"><img width='316' height='57' class='img-responsive' src="{% static 'images/logo.svg' %}" alt='logo'/></a></div>
+                <div class="rd-navbar-brand veil reveal-md-inline-block">
+                    <a href="/">
+                        <img width='316' height='57' class='img-responsive' src="{% static 'images/logo-odonto-dark.svg' %}" alt='logo-odonto'/>
+                    </a>
+                </div>
                 <div>
                     <address class="contact-info reveal-sm-inline-block text-left">
                         <div class="p unit unit-horizontal unit-spacing-xs">
