--- a/web/templates/clinica/footer.html
+++ b/web/templates/clinica/footer.html
@@ -5,17 +5,30 @@
             <div class="cell-sm-8 cell-md-12">
                 <div class="range range-md-justify range-md-middle">
                     <div class="cell-md-4 cell-md-push-1 text-md-left">
-                        <!-- Footer brand-->
-                        <div class="footer-brand reveal-inline-block"><a href="index.html"><img width='316' height='57' class='img-responsive' src="{% static 'images/logo-dark.svg' %}" alt=''/></a></div>
+                        <div class="footer-brand reveal-inline-block">
+                            <a href="http://www.userena.cl/">
+                                <img width='316' height='57' class='img-responsive' src="{% static 'images/logo-dark.svg' %}" alt='logo-uls'/>
+                            </a>
+                        </div>
                     </div>
                     <div class="cell-md-4 offset-top-55 offset-md-top-0 cell-md-push-3 text-md-right">
                         <ul class="list-inline">
-                            <li><a href="https://twitter.com/OdontologiaULS/" target="_blank" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light-2"></a></li>
-                            <li><a href="https://www.instagram.com/odontologiauls/" target="_blank" class="icon fa fa-instagram icon-xxs icon-circle icon-gray-light-2"></a></li>
+                            <li>
+                                <a href="https://twitter.com/OdontologiaULS/" target="_blank" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light-2"></a>
+                            </li>
+                            <li>
+                                <a href="https://www.instagram.com/odontologiauls/" target="_blank" class="icon fa fa-instagram icon-xxs icon-circle icon-gray-light-2"></a>
+                            </li>
                         </ul>
                     </div>
                     <div class="cell-md-4 offset-top-55 offset-md-top-0 cell-md-push-2">
-                        <p class="text-gray">&copy; <span id="copyright-year"></span> Todos los derechos reservados.<br><a href="http://userena.digital" class="text-gray">Campus Digital</a></p>
+                        <p class="text-gray">
+                            (51) 2 334952 - Carrera de odontología.<br>
+                            (51) 2 334966 - Clínica odontologica.<br>
+                            Odontología de la Universidad de La Serena &copy; <span id="copyright-year"></span> Derechos reservados.<br>
+                            Avenida Juan Cisternas #1015.<br>
+                            Desarrollado por <a href="http://userena.digital" class="text-gray">Campus Digital</a>
+                        </p>
                     </div>
                 </div>
             </div>
