Se mejora visualizacion del footer

--- a/web/templates/carrera/footer.html
+++ b/web/templates/carrera/footer.html
@@ -7,7 +7,7 @@
                     <div class="cell-md-4 cell-md-push-1 text-md-left">
                         <div class="footer-brand reveal-inline-block">
                             <a href="http://www.userena.cl/">
-                                <img width='316' height='57' class='img-responsive' src="{% static 'images/logo-dark.svg' %}" alt='logo-uls'/>
+                                <img width='316' height='57' class='img-responsive' src="{% static 'images/logo-uls-white.svg' %}" alt='logo-uls'/>
                             </a>
                         </div>
                     </div>
@@ -23,9 +23,8 @@
                     </div>
                     <div class="cell-md-4 offset-top-55 offset-md-top-0 cell-md-push-2">
                         <p class="text-gray">
-                            (51) 2 334952 - Carrera de odontología.<br>
-                            (51) 2 334966 - Clínica odontologica.<br>
                             Odontología de la Universidad de La Serena &copy; <span id="copyright-year"></span> Derechos reservados.<br>
+                            (51) 2 334952 - Carrera | (51) 2 334966 - Clínica<br>
                             Avenida Juan Cisternas #1015.<br>
                             Desarrollado por <a href="http://userena.digital" class="text-gray">Campus Digital</a>
                         </p>
