--- a/web/templates/carrera/footer.html
+++ b/web/templates/carrera/footer.html
@@ -7,19 +7,9 @@
                     <div class="cell-md-4 cell-md-push-1 text-md-left">
                         <div class="footer-brand reveal-inline-block">
                             <a href="http://www.userena.cl/">
-                                <img width='316' height='57' class='img-responsive' src="{% static 'images/logo-uls-white.svg' %}" alt='logo-uls'/>
+                                <img width='330' height='auto' class='img-responsive' src="{% static 'images/logo-uls-white.svg' %}" alt='logo-uls'/>
                             </a>
                         </div>
-                    </div>
-                    <div class="cell-md-4 offset-top-55 offset-md-top-0 cell-md-push-3 text-md-right">
-                        <ul class="list-inline">
-                            <li>
-                                <a href="https://twitter.com/OdontologiaULS/" target="_blank" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light-2"></a>
-                            </li>
-                            <li>
-                                <a href="https://www.instagram.com/odontologiauls/" target="_blank" class="icon fa fa-instagram icon-xxs icon-circle icon-gray-light-2"></a>
-                            </li>
-                        </ul>
                     </div>
                     <div class="cell-md-4 offset-top-55 offset-md-top-0 cell-md-push-2">
                         <p class="text-gray">
@@ -28,6 +18,23 @@
                             Avenida Juan Cisternas #1015.<br>
                             Desarrollado por <a href="http://userena.digital" class="text-gray">Campus Digital</a>
                         </p>
+                    </div>
+                    <div class="cell-md-4 offset-top-55 offset-md-top-0 cell-md-push-3">
+                        <div class="footer-brand reveal-inline-block">
+                            <a href="http://www.userena.cl/">
+                                <img width='330' height='auto' class='img-responsive' src="{% static 'images/logo-cna.svg' %}" alt='logo-cna'/>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="cell-md-4 offset-top-55 offset-md-top-0 cell-md-push-4 text-md-right">
+                        <ul class="list-inline">
+                            <li>
+                                <a href="https://twitter.com/OdontologiaULS/" target="_blank" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light-2"></a>
+                            </li>
+                            <li>
+                                <a href="https://www.instagram.com/odontologiauls/" target="_blank" class="icon fa fa-instagram icon-xxs icon-circle icon-gray-light-2"></a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
