--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -7,12 +7,12 @@
             <div class="rd-navbar-top-panel">
                 <div>
                     <a href="http://www.userena.cl/">
-                        <img width='316' height='57' class='img-responsive' src="{% static 'images/logo-uls-blue.svg' %}" alt='logo-uls'/>
+                        <img width='330' height='auto' class='img-responsive' src="{% static 'images/logo-uls-blue.svg' %}" alt='logo-uls'/>
                     </a>
                 </div>
                 <div class="rd-navbar-brand veil reveal-md-inline-block">
                     <a href="/">
-                        <img width='316' height='57' class='img-responsive' src="{% static 'images/logo-odonto-dark.svg' %}" alt='logo-odonto'/>
+                        <img width='290' height='auto' class='img-responsive' src="{% static 'images/logo-odonto-dark.svg' %}" alt='logo-odonto'/>
                     </a>
                 </div>
                 <div>
