--- a/web/templates/clinica/footer.html
+++ b/web/templates/clinica/footer.html
@@ -13,8 +13,9 @@
                     </div>
                     <div class="cell-md-4 offset-top-55 offset-md-top-0 cell-md-push-2">
                         <p class="text-gray">
-                            Odontología de la Universidad de La Serena &copy; <span id="copyright-year"></span> Derechos reservados.<br>
+                            Odontología de la Universidad de La Serena, Avenida Juan Cisternas #1015<br> 
                             (51) 2 334952 - Carrera | (51) 2 334966 - Clínica<br>
+                            &copy; <span id="copyright-year"></span> Derechos reservados<br>
                             Desarrollado por <a href="http://userena.digital" class="text-gray">Campus Digital</a>
                         </p>
                         <ul class="list-inline">
@@ -28,7 +29,7 @@
                     </div>
                     <div class="cell-md-4 offset-top-55 offset-md-top-0 cell-md-push-3">
                         <div class="footer-brand reveal-inline-block">
-                            <a href="http://www.userena.cl/">
+                            <a href="http://www.userena.cl/acreditacion.html">
                                 <img width='330' height='auto' class='img-responsive' src="{% static 'images/logo-cna.svg' %}" alt='logo-cna'/>
                             </a>
                         </div>
