Se deja espacion en header

--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -15,6 +15,13 @@
                         <img width='290' height='auto' class='img-responsive' src="{% static 'images/logo-odonto-dark.svg' %}" alt='logo-odonto'/>
                     </a>
                 </div>
+                <div>
+                    <address class="contact-info reveal-sm-inline-block text-left">
+                        <div class="p unit unit-horizontal unit-spacing-xs">
+                            
+                        </div>
+                    </address>
+                </div>
             </div>
             <!-- RD Navbar Panel-->
             <div class="rd-navbar-panel">
