--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -7,15 +7,15 @@
             <div class="rd-navbar-top-panel">
                 <div>
                     <a href="http://www.userena.cl/">
-                        <img width='400' height='auto' class='img-responsive' src="{% static 'images/logo-uls-blue.svg' %}" alt='logo-uls'/>
+                        <img width='330px' height='auto' class='img-responsive' src="{% static 'images/logo-uls-blue.svg' %}" alt='logo-uls'/>
                     </a>
                 </div>
                 <div class="rd-navbar-brand veil reveal-md-inline-block">
                     <a href="/">
-                        <img width='250' height='auto' class='img-responsive' src="{% static 'images/logo-odonto-dark.svg' %}" alt='logo-odonto'/>
+                        <img width='250px' height='auto' class='img-responsive' src="{% static 'images/logo-odonto-dark.svg' %}" alt='logo-odonto'/>
                     </a>
                 </div>
-                <div>
+                <div width="250px">
                     <address class="contact-info reveal-sm-inline-block text-left">
                         <div class="p unit unit-horizontal unit-spacing-xs">
                             
