--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -10,17 +10,10 @@
                         <img width='330px' height='auto' class='img-responsive' src="{% static 'images/logo-uls-blue.svg' %}" alt='logo-uls'/>
                     </a>
                 </div>
-                <div class="rd-navbar-brand veil reveal-md-inline-block">
+                <div>
                     <a href="/">
                         <img width='250px' height='auto' class='img-responsive' src="{% static 'images/logo-odonto-dark.svg' %}" alt='logo-odonto'/>
                     </a>
-                </div>
-                <div width="300px">
-                    <address class="contact-info reveal-sm-inline-block text-left">
-                        <div class="p unit unit-horizontal unit-spacing-xs">
-                            
-                        </div>
-                    </address>
                 </div>
             </div>
             <!-- RD Navbar Panel-->
