Se deja el logo de odontologia en tamaño tablet y celu

--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -24,7 +24,7 @@
                 <!-- RD Navbar Toggle-->
                 <button data-rd-navbar-toggle=".rd-navbar, .rd-navbar-nav-wrap" class="rd-navbar-toggle"><span></span></button>
                 <!--Navbar Brand-->
-                <div class="rd-navbar-brand veil-md"><a href="index.html"><img width='316' height='57' class='img-responsive' src="{% static 'images/logo.svg' %}" alt='logo'/></a></div>
+                <div class="rd-navbar-brand veil-md"><a href="index.html"><img width='330' height='auto' class='img-responsive' src="{% static 'images/logo-uls-odonto-dark.svg' %}" alt='logo'/></a></div>
                 <button data-rd-navbar-toggle=".rd-navbar, .rd-navbar-top-panel" class="rd-navbar-top-panel-toggle"><span></span></button>
             </div>
             <div class="rd-navbar-menu-wrap">
