se actualiza link de logos

--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -6,7 +6,7 @@
         <div class="rd-navbar-inner">
             <div class="rd-navbar-top-panel">
                 <div>
-                    <a href="http://www.userena.cl/">
+                    <a href="http://www.userena.cl/" target="_blank">
                         <img width='330px' height='auto' class='img-responsive' src="{% static 'images/logo-uls-blue.svg' %}" alt='logo-uls'/>
                     </a>
                 </div>
