--- a/web/templates/carrera/footer.html
+++ b/web/templates/carrera/footer.html
@@ -6,8 +6,8 @@
                 <div class="range range-md-justify range-md-middle">
                     <div class="cell-md-4 cell-md-push-1 text-md-left">
                         <div class="footer-brand reveal-inline-block">
-                            <a href="http://www.userena.cl/">
-                                <img width='330px' height='auto' class='img-responsive' src="{% static 'images/logo-uls-white.svg' %}" alt='logo-uls' target="_blank"/>
+                            <a href="http://www.userena.cl/" target="_blank">
+                                <img width='330px' height='auto' class='img-responsive' src="{% static 'images/logo-uls-white.svg' %}" alt='logo-uls' />
                             </a>
                         </div>
                     </div>
@@ -29,8 +29,8 @@
                     </div>
                     <div class="cell-md-4 offset-top-55 offset-md-top-0 cell-md-push-3">
                         <div class="footer-brand reveal-inline-block">
-                            <a href="http://www.userena.cl/acreditacion.html">
-                                <img width='330px' height='auto' class='img-responsive' src="{% static 'images/logo-cna.svg' %}" alt='logo-cna' target="_blank"/>
+                            <a href="http://www.userena.cl/acreditacion.html" target="_blank">
+                                <img width='330px' height='auto' class='img-responsive' src="{% static 'images/logo-cna.svg' %}" alt='logo-cna' />
                             </a>
                         </div>
                     </div>
