Se mejoran las paginas de error

--- a/web/templates/404.html
+++ b/web/templates/404.html
@@ -29,7 +29,7 @@
             <div class="one-page">
                 <div class="one-page-header">
                     <!--Navbar Brand-->
-                    <div class="rd-navbar-brand"><a href="index.html"><img width='316' height='57' class='img-responsive' src='../static/images/logo.svg' alt='logo'/></a></div>
+                    <div class="rd-navbar-brand"><a href="index.html"><img width='330' height='auto' class='img-responsive' src='../static/images/logo-uls-odonto-dark.svg' alt='logo'/></a></div>
                 </div>
                 <!-- 404-->
                 <section>
