--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -33,8 +33,9 @@
                         <!-- RD Navbar Nav-->
                         <ul class="rd-navbar-nav">
                             <li class="{% active_menu '^[/]$' %}"><a href="/"><span>Inicio</span></a></li>
-                            <li class="{% active_menu '^(/carrera/)(or|ob|pl|pe)([a-z]+)' %}"><a href="#"><span>Quienes Somos</span></a>
+                            <li class="{% active_menu '^(/carrera/)(or|ob|pl|pe)([a-z]+)' %}"><a href="#"><span>Carrera</span></a>
                                 <ul class="rd-navbar-dropdown">
+                                    <li><a href="/carrera/admision"><span class="text-middle">Admisión</span></a></li>
                                     <li><a href="/carrera/organigrama"><span class="text-middle">Organigrama</span></a></li>
                                     <li><a href="/carrera/objetivos"><span class="text-middle">Misión - Visión</span></a></li>
                                     <li><a href="/carrera/docentes"><span class="text-middle">Académicos</span></a></li>
@@ -43,7 +44,6 @@
                                     <li><a href="/carrera/perfilp"><span class="text-middle">Perfil Profesional</span></a></li>
                                 </ul>
                             </li>
-                            <li class="{% active_menu '^(/carrera/)(ad)([a-z]+)' %}"><a href="/carrera/admision"><span>Admisión</span></a></li>
                             <li class="{% active_menu '/clinica' %}"><a href="#"><span>Clínica</span></a>
                                 <ul class="rd-navbar-dropdown">
                                     <li><a href="/clinica/organigrama"><span class="text-middle">Organigrama</span></a></li>
